--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <h1>Hello Sekai.</h1>
+        <div id="gamescreen">
+            <div class="dealer">
+                <h1>Dealer</h1>
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+            </div>
+            <div class="player">
+                <h1>Player</h1>
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+            </div>
+        </div>
+        <div id="panel">
+            <h1>Panel</h1>
+            <button type="button">HIT</button>
+            <button type="button">STAND</button>
+            <button type="button">BET</button>
+        </div>
     </body>
     <script src="./index.js" defer></script>
 </html>
