--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
             <button type="button">BET</button>
         </div>
     </body>
+    <script src="./loader.js" async></script>
     <script src="./index.js" defer></script>
 </html>
