--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
         <div id="gamescreen">
             <div class="dealer">
                 <h1>Dealer</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
                 <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
             </div>
             <div class="player">
                 <h1>Player</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
             </div>
         </div>
         <div id="panel">
             <h1>Panel</h1>
-            <button type="button">HIT</button>
-            <button type="button">STAND</button>
-            <button type="button">BET</button>
+            <button type="button" class="btn">HIT</button>
+            <button type="button" class="btn">STAND</button>
+            <button type="button" class="btn">BET</button>
         </div>
     </body>
     <script src="./loader.js" async></script>
