--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <body>
         <div id="gamescreen">
             <div class="dealer">
-                <h1>Dealer</h1>
+                <h1 class="wave">Dealer</h1>
                 <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
                 <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
             </div>
             <div class="player">
-                <h1>Player</h1>
+                <h1 class="wave">Player</h1>
                 <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
             </div>
         </div>
         <div id="panel">
-            <h1>Panel</h1>
+            <h1 class="wave">Panel</h1>
             <button type="button" class="btn">HIT</button>
             <button type="button" class="btn">STAND</button>
             <button type="button" class="btn">BET</button>
