--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         <div id="gamescreen">
             <div class="dealer">
                 <h1 class="wave">Dealer</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy" id="dealer_dummy">
             </div>
             <div class="player">
                 <h1 class="wave">Player</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy">
+                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy" id="player_dummy">
             </div>
         </div>
         <div id="panel">
@@ -24,6 +23,5 @@
             <button type="button" class="btn">BET</button>
         </div>
     </body>
-    <script src="./loader.js" async></script>
-    <script src="./index.js" defer></script>
+    <script src="./index.js" type="module"></script>
 </html>
