--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
         <div id="gamescreen">
             <div class="dealer">
                 <h1 class="wave">Dealer</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy" id="dealer_dummy">
+                <div id="dealer_cards" class="cards">
+                    <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" id="dealer_dummy">
+                </div>
             </div>
             <div class="player">
                 <h1 class="wave">Player</h1>
-                <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" class="dummy" id="player_dummy">
+                <div id="player_cards" class="cards">
+                    <img src="./assets/cards/ace_of_hearts.png" height="128" draggable="false" id="player_dummy">
+                </div>
             </div>
         </div>
         <div id="panel">
