fix css, add ids to html button

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <div id="panel">
             <h1 class="wave">Panel</h1>
-            <button type="button" class="btn">HIT</button>
-            <button type="button" class="btn">STAND</button>
-            <button type="button" class="btn">BET</button>
+            <button type="button" class="btn" id="panel_hit">HIT</button>
+            <button type="button" class="btn" id="panel_stand">STAND</button>
+            <button type="button" class="btn" id="panel_bet">BET</button>
         </div>
     </body>
     <script src="./index.js" type="module"></script>
